file/testdata/kong2kic/gateway/yaml/expected-output.yaml
apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service-upstream
upstream:
  algorithm: round-robin
  hash_fallback: none
  hash_on: none
  hash_on_cookie_path: /
  healthchecks:
    active:
      concurrency: 10
      headers:
        x-another-header:
        - bla
        x-my-header:
        - foo
        - bar
      healthy:
        http_statuses:
        - 200
        - 302
        interval: 0
        successes: 0
      http_path: /
      https_sni: example.com
      https_verify_certificate: true
      timeout: 1
      type: http
      unhealthy:
        http_failures: 0
        http_statuses:
        - 429
        - 404
        - 500
        - 501
        - 502
        - 503
        - 504
        - 505
        interval: 0
        tcp_failures: 0
        timeouts: 0
    passive:
      healthy:
        http_statuses:
        - 200
        - 201
        - 202
        - 203
        - 204
        - 205
        - 206
        - 207
        - 208
        - 226
        - 300
        - 301
        - 302
        - 303
        - 304
        - 305
        - 306
        - 307
        - 308
        successes: 0
      type: http
      unhealthy:
        http_failures: 0
        http_statuses:
        - 429
        - 500
        - 503
        tcp_failures: 0
        timeouts: 0
    threshold: 0
  host_header: example.com
  slots: 10000
---
apiVersion: configuration.konghq.com/v1
config:
  hide_client_headers: false
  identifier: consumer
  limit:
  - 5
  namespace: example_namespace
  strategy: local
  sync_rate: -1
  window_size:
  - 30
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service-rate-limiting-advanced
plugin: rate-limiting-advanced
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  aws_key: my_key
  aws_region: us-west-2
  aws_secret: my_secret
  function_name: my_function
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long9344b5559f
plugin: aws-lambda
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  credentials: true
  exposed_headers:
  - X-My-Header
  headers:
  - Authorization
  max_age: 3600
  methods:
  - GET
  - POST
  origins:
  - example.com
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-longfdeaa51f90
plugin: cors
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  path: /var/log/kong/kong.log
  reopen: true
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long3b4b1fae8e
plugin: file-log
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  content_type: application/json
  http_endpoint: http://example.com/logs
  keepalive: 60000
  method: POST
  queue_size: 1000
  retry_count: 10
  timeout: 10000
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long59030a424c
plugin: http-log
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  allow:
  - 192.168.0.1/24
  deny:
  - 192.168.0.2/32
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-longb44edd01cf
plugin: ip-restriction
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  hide_client_headers: false
  identifier: consumer
  limit:
  - 5
  namespace: example_namespace
  strategy: local
  sync_rate: -1
  window_size:
  - 30
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-longef35b834c6
plugin: rate-limiting-advanced
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  message: Forbidden
  status_code: 403
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-longb2c08ebc54
plugin: request-termination
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  limits:
    limit_name:
      minute: 10
  policy: local
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-longc400f1ab11
plugin: response-ratelimiting
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  host: example.com
  port: 1234
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long47f9f5054d
plugin: tcp-log
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  hide_credentials: false
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long26f9714514
plugin: basic-auth
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  anonymous: null
  claims_to_verify:
  - exp
  - nbf
  header_names:
  - Authorization
  key_claim_name: kid
  maximum_expiration: 3600
  run_on_preflight: true
  secret_is_base64: false
  uri_param_names:
  - token
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long0239c8f63e
plugin: jwt
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  hide_credentials: false
  key_in_body: false
  key_names:
  - apikey
  run_on_preflight: true
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long5494737f3e
plugin: key-auth
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  ca_certificates:
  - cce8c384-721f-4f58-85dd-50834e3e733a
  revocation_check_mode: SKIP
  skip_consumer_lookup: false
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long89ae2d2b5d
plugin: mtls-auth
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  allow:
  - admin
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-longb2440ac898
plugin: acl
status: {}
---
apiVersion: configuration.konghq.com/v1
config:
  hide_client_headers: false
  identifier: consumer
  limit:
  - 5
  namespace: example_namespace
  strategy: local
  sync_rate: -1
  window_size:
  - 30
kind: KongPlugin
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-user-rate-limiting-advanced
plugin: rate-limiting-advanced
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    konghq.com/https-redirect-status-code: "302"
    konghq.com/preserve-host: "true"
    konghq.com/regex-priority: "1"
    konghq.com/snis: example.com
    konghq.com/strip-path: "false"
  creationTimestamp: null
  name: example-service--route-thisisaveryvery-long2093a020ca
spec:
  hostnames:
  - example.com
  - another-example.com
  - yet-another-example.com
  parentRefs:
  - name: kong
  rules:
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: GET
      path:
        type: RegularExpression
        value: /v1/example/?$
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: POST
      path:
        type: RegularExpression
        value: /v1/example/?$
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: GET
      path:
        type: PathPrefix
        value: /v1/another-example
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: POST
      path:
        type: PathPrefix
        value: /v1/another-example
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: GET
      path:
        type: PathPrefix
        value: /v1/yet-another-example
  - backendRefs:
    - name: example-service
      port: 80
    filters:
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long9344b5559f
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longfdeaa51f90
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long3b4b1fae8e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long59030a424c
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb44edd01cf
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longef35b834c6
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2c08ebc54
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longc400f1ab11
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long47f9f5054d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long26f9714514
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long0239c8f63e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long5494737f3e
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-long89ae2d2b5d
      type: ExtensionRef
    - extensionRef:
        group: configuration.konghq.com
        kind: KongPlugin
        name: example-service--route-thisisaveryvery-longb2440ac898
      type: ExtensionRef
    matches:
    - headers:
      - name: x-another-header
        type: Exact
        value: first-header-value,second-header-value
      - name: x-my-header
        type: RegularExpression
        value: foos?bar$
      method: POST
      path:
        type: PathPrefix
        value: /v1/yet-another-example
status:
  parents: null
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/connect-timeout: "5000"
    konghq.com/override: example-service-upstream
    konghq.com/path: /v1
    konghq.com/plugins: example-service-rate-limiting-advanced
    konghq.com/protocol: http
    konghq.com/read-timeout: "60000"
    konghq.com/retries: "5"
    konghq.com/write-timeout: "60000"
  creationTimestamp: null
  name: example-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: example-service
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: key-auth-example-user
stringData:
  key: my_api_key
  kongCredType: key-auth
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: jwt-auth-example-user
stringData:
  algorithm: HS256
  key: my_jwt_secret
  kongCredType: jwt
  rsa_public_key: my_rsa_public_key
  secret: my_secret_key
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: basic-auth-example-user
stringData:
  kongCredType: basic-auth
  password: my_basic_password
  username: my_basic_user
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: acl-group-example-user
stringData:
  group: acl_group
  kongCredType: acl
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: mtls-auth-example-user
stringData:
  id: cce8c384-721f-4f58-85dd-50834e3e733a
  kongCredType: mtls-auth
  subject_name: example-user@example.com
type: Opaque
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: ca-cert-a672ab52d2341203bd70116b456413d7ac3ffc162abbf
stringData:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBfDCCASKgAwIBAgIRAJqcZC1VSvSQLMN1+7yAeswwCgYIKoZIzj0EAwIwHDEa
[...]
    -----END CERTIFICATE-----
  ca.digest: f1baffe9fe9cf8497e38a4271d67fab44423678b7e7c0f677a50f37c113d81b5
type: generic
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: ca-cert-a4f087c2ee00e6d43cfb4f6884fc1e79f7e6e08e84471
stringData:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBqTCCAVCgAwIBAgIQb5LqGa9gS3+Mc2ntWfSoJjAKBggqhkjOPQQDAjAcMRow
[...]
    -----END CERTIFICATE-----
  ca.digest: dbef7ed285fb292e24f84ffba93c48d92fa322387d85469c460c655abedd5308
type: generic
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: ca-cert-6b095c7ff377b01252a4dfec59c582fe32934fa7ed0cf
stringData:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIBujCCAV+gAwIBAgIRAMkGpj7WZf+2RFE/q7ZhejEwCgYIKoZIzj0EAwIwKjEo
[...]
    gxUhveuHBXMWnzUbn6U=
    -----END CERTIFICATE-----
  ca.digest: 45b2b6dd9d4102955b1b1e4b540e677f140521462ed4f22fa5a713863ca84600
type: generic
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVDVENDQXZHZ0F3SUJBZ0lVQXVzWUdQOUJ3b0xGRkFKZEIvalk2ZVV6VXlBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2daSXhDekFKQmdOVkJBWVRBbFZMTVJJd0VBWURWUVFJREFsSVlXMXdjMmhwY21VeEVqQVFCZ05WQkFjTQpDVUZzWkdWeWMyaHZkREVRTUE0R0ExVUVDZ3dIUzI5dVp5QlZTekVRTUE0R0ExVUVDd3dIVTNWd2NHOXlkREVZCk1CWUdBMVVFQXd3UFUzVndjRzl5ZENCU2IyOTBJRU5CTVIwd0d3WUpLb1pJaHZjTkFRa0JGZzV6ZEhWQWEyOXUKWjJoeExtTnZiVEFlRncweU1UQXhNVFV4TVRFNU5ETmFGdzB5TWpBMU16QXhNVEU1TkROYU1JR1JNUXN3Q1FZRApWUVFHRXdKVlN6RVNNQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ1ZHeW9xcUFpdFFVeloKUCs1ZU5wK3JwTWt4TG5pOGdkdDN2L2REODAvNk0vTUdjNE1FNkhjMnhRRXRsYlJhOVJDcWhjNks5QTYxNmZRaQo1M216bllnRWR5T2l3LzFtUDhkQ2x0NWNkeGQrWHhvbERraXoweC9NM29nMHpNZGRRbkNnOFhyQVBqTnY3T2F0CklvSkRrT00rTU43Nk01dVd1ZGlIRUUwZ1BDdVpKelZOYWxHUVM2WFBwSWNSWEdvWGhDdFk3Q0VpU1lYSFlzMlEKWHhuWlBFdGI2Y28rUmJnbWU2R2tielFPb3BoNDBpY0tZS04rczNmT0U0S3lJRlkvVWVFTFNjckZzdjEvbTIyaQpsSWlnVnNBTFhlUGcwe [...]
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: cert-0ee0e1584c8637facac95bd5fce315367dee124c0086d41e
type: kubernetes.io/tls
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZlRENDQkdDZ0F3SUJBZ0lVQXVzWUdQOUJ3b0xGRkFKZEIvalk2ZVV6VXlRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2daSXhDekFKQmdOVkJBWVRBbFZMTVJJd0VBWURWUVFJREFsSVlXMXdjMmhwY21VeEVqQVFCZ05WQkFjTQpDVUZzWkdWeWMyaHZkREVRTUE0R0ExVUVDZ3dIUzI5dVp5QlZTekVRTUE0R0ExVUVDd3dIVTNWd2NHOXlkREVZCk1CWUdBMVVFQXd3UFUzVndjRzl5ZENCU2IyOTBJRU5CTVIwd0d3WUpLb1pJaHZjTkFRa0JGZzV6ZEhWQWEyOXUKWjJoeExtTnZiVEFlRncweU1UQXhNakF4TlRBME5EVmFGdzB5TWpBeE1qQXhOVEEwTkRWYU1JR1FNUXN3Q1FZRApWUVFHRXdKVlN6RVNNQ [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlKS1FJQkFBS0NBZ0VBMS8rODMvWU5pRVZLWXZjdVZ3WUd2ZTZhZnNnMUJZQ24xK0U5VXdnaDB1d0FlblQvCkRLQjhOaHFvVnhjN2NaMkhhVEkxNDZJR21GSUNtY3RsVFd2TFBMZ2xIbVRvYnlPVVY2dElKQWp2enlFT3BDNDUKOGhMR2didjhtaEdYSldQeEJWdTdXeTZIYXB6MmJrMGNFc2NmTDdQSEthUnUzRDZyOC96YmhoV0FxZTRFSXQrTgpWWVQ2YmFhWUJzN2JQWlFYcy9zbHVLSStETll1RGVhQW1vU3VDYzRlaW42ejB4RHFDU01tUGViempuczAzdHRCCjI5dldMM2VZWTlkdmdvQ2QrQ1BoWFQvQzRDSHR2S2JIK2hPUVlEdFZGNk1PMW1tQUJBUVRRV01SLzAwK1FJMHgKdHZ1WHRFUHVyb [...]
kind: Secret
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: cert-b12464ec431576239dd9cc2545d528f6cbdbd988cf076323
type: kubernetes.io/tls
---
apiVersion: configuration.konghq.com/v1
consumerGroups:
- example-consumer-group
credentials:
- key-auth-example-user
- jwt-auth-example-user
- basic-auth-example-user
- acl-group-example-user
- mtls-auth-example-user
custom_id: "1234567890"
kind: KongConsumer
metadata:
  annotations:
    konghq.com/plugins: example-user-rate-limiting-advanced
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-user
status: {}
username: example-user
---
apiVersion: configuration.konghq.com/v1beta1
kind: KongConsumerGroup
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: example-consumer-group
status: {}
---
